clusters/cl01tl/manifests/ntfy/ntfy.yaml
---
# Source: ntfy/charts/ntfy/templates/common.yaml
---
# Source: ntfy/charts/ntfy/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/service: ntfy
    helm.sh/chart: ntfy-4.4.0
  namespace: ntfy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/name: ntfy
---
# Source: ntfy/charts/ntfy/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ntfy
    helm.sh/chart: ntfy-4.4.0
  namespace: ntfy
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: ntfy
      app.kubernetes.io/instance: ntfy
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: ntfy
        app.kubernetes.io/name: ntfy
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - args:
          - serve
          image: binwiederhier/ntfy:v2.15.0
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
          - mountPath: /var/cache/ntfy
            name: cache
      volumes: 
        - name: cache
          persistentVolumeClaim:
            claimName: ntfy
---
# Source: ntfy/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-ntfy
  namespace: ntfy
  labels:
    app.kubernetes.io/name: http-route-ntfy
    app.kubernetes.io/instance: ntfy
    app.kubernetes.io/part-of: ntfy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ntfy.alexlebens.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''
          kind: Service
          name: ntfy
          port: 80
          weight: 100
